# hello-fastapi

./: .gitignore  Dockerfile  README.md  deployment.yml  docker-compose.yml  pyproject.toml
app/: main.py
tests/: conftest.py  test_hello.py
