[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Yani Lathouris <ylathouris@gmail.com>"]
packages = [
    { include="app" }
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
flake8-builtins = "^1.5.3"
flake8-broken-line = "^0.2.1"
flake8-eradicate = "^1.0.0"
flake8-mutable = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.24.0"
pytest-cov = "^2.10.1"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
